<resources>
    <string name="app_name">Payesh</string>
    <string name="title_home">Home</string>
    <string name="splash_screen_title">پایش</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="add_update_item">Add Item</string>
    <string name="add_item">Add Item</string>


    <string name="lbl_add_item">ADD ITEM</string>

    <string name="lbl_systolic">Systolic</string>
    <string name="lbl_diastolic">Diastolic</string>
    <string name="lbl_pulse">Pulse</string>
    <string name="lbl_date">Date</string>
    <string name="lbl_time">Time</string>

    <string name="title_select_heart_systolic">SELECT SYSTOLIC</string>
    <string name="title_select_heart_diastolic">SELECT DIASTOLIC</string>
    <string name="title_select_heart_pulse">SELECT PULSE</string>

    <string name="err_msg_select_heart_date">Selcet Heart Date.</string>
    <string name="err_msg_select_heart_time">Select Heart Time.</string>
    <string name="err_msg_select_heart_systloic">Select Heart Systolic.</string>
    <string name="err_msg_select_heart_diastolic">Select Heart Diastolic.</string>
    <string name="err_msg_select_heart_pulse">Select Heart Pulse.</string>


</resources>